--- a/src/scss/partials/_mixins.scss
+++ b/src/scss/partials/_mixins.scss
@@ -1,4 +1,12 @@
-@mixin container-center {
-  width: $container-width;
+@mixin container-center($size) {
+  width: $size;
   margin: 0 auto;
+}
+
+@mixin button {
+  padding: 13px 17px;
+  border-radius: 3px;
+  background-color: $primary-blue;
+  color: #fff;
+  cursor: pointer;
 }
