--- a/src/scss/partials/_content.scss
+++ b/src/scss/partials/_content.scss
@@ -1,6 +1,6 @@
 @import '_content-section1.scss';
 @import '_content-section2.scss';
 @import '_content-section3.scss';
-
-main {
-}
+@import '_content-section4.scss';
+@import '_content-section5.scss';
+@import '_content-section6.scss';
