--- a/src/scss/partials/_mixins.scss
+++ b/src/scss/partials/_mixins.scss
@@ -4,7 +4,8 @@
 }
 
 @mixin button {
-  padding: 15px 20px;
+  font-family: "Poppins", sans-serif;
+  padding: 12px 22px;
   border-radius: 5px;
   background-color: $primary-blue;
   color: #fff;
