--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -15,21 +15,25 @@
       align-items: center;
       &:not(:first-child) {
         li {
-          font-size: 15px;
-          font-weight: 500;
           cursor: pointer;
           padding-left: 30px;
+          a {
+            font-size: 15px;
+            font-weight: 500;
+            color: #000;
+          }
         }
       }
       &:first-child {
-        font-size: 15px;
-        font-weight: 500;
+        a {
+          font-size: 15px;
+          font-weight: 500;
+          color: $primary-blue;
+        }
         cursor: pointer;
-        color: $primary-blue;
         padding-left: 0;
         border-bottom: 2px solid $primary-blue;
       }
-
     }
     .navbar-icons {
       padding-left: 50px;
