--- a/src/scss/partials/_content-section4.scss
+++ b/src/scss/partials/_content-section4.scss
@@ -22,21 +22,27 @@
       .testimonials-card-wrapper {
         justify-content: space-around;
 
+        position: relative;
         margin-top: 80px;
         .testimonials-card {
-          margin-bottom: 60px;
+          margin-bottom: 35px;
           flex-direction: column;
           position: relative;
 
           width: calc(100%/2 - 60px);
-          border-radius: 3px;
-          box-shadow: 0 0 60px #00000026;
           padding: 40px 30px;
+          border-radius: 3px;
 
           background-image: url('../../dist/img/quotes.png');
           background-repeat: no-repeat;
           background-position: 50% 65%;
           background-size: 150px 150px;
+          box-shadow:
+          0 20px 50px #00000026,
+          0 40px 0 -30px #fff,
+          0 40px 20px -29px #00000026,
+          0 60px 0 -40px #fff,
+          0 60px 20px -39px #00000026;
           img {
             align-self: center;
 
