--- a/src/scss/partials/_content-section6.scss
+++ b/src/scss/partials/_content-section6.scss
@@ -47,9 +47,14 @@
           border: 1px solid #00000014;
           border-radius: 5px;
           margin-right: 10px;
+          cursor: pointer;
+          &:hover {
+            i {
+              color: #1E1E1E;
+            }
+          }
           i {
             font-size: 15px;
-            cursor: pointer;
           }
         }
       }
